@@ -1,3 +1,6 @@
+2017-11-18 Christina Zeller <chriz@keera.co.uk>:
+        * Adds basics for powerups in SDL1.
+
 2017-11-02 Ivan Perez <ivan.perez@keera.co.uk>:
         * Version bump (0.1.5.4).
         * Adds new levels.
